--- a/styleSheet.css
+++ b/styleSheet.css
@@ -119,7 +119,6 @@ h1{
     #display{
         margin-left: 250px;
         margin-right: 20px;
-        padding: 1em;
         overflow: hidden;
         border: 9px solid #F4FA58;
         height: 430px;
@@ -127,7 +126,7 @@ h1{
     }
     
     /* Styling the displayed link to fit into the content area */
-    object{
+    object, iframe{
         height: 100%;
         width: 100%;
         overflow: hidden;
